# de_Funk

./: .env.example  .gitignore  ALPHA_VANTAGE_SETUP.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_REDESIGN_SUMMARY.md  ARCHITECTURE_REFACTOR.md  BACKEND_AGNOSTIC_ALIASES.md  CALENDAR_DIMENSION_GUIDE.md  CLAUDE.md  CODEBASE_JOURNEY.md  CURRENT_STATUS.md  FACETS_CLEANUP_RECOMMENDATION.md  FILTER_PUSHDOWN_FIX.md  FORECAST_README.md  GRAPH_REFACTOR_CHANGELOG.md  GRAPH_REFACTOR_IMPLEMENTATION_PLAN.md  GRAPH_REFACTOR_SCAN.md  IMPLEMENTATION_SUMMARY.md  MODEL_DEPENDENCY_ANALYSIS.md  MODEL_DEPENDENCY_GRAPH.txt  MODEL_EDGES_REFERENCE.md  NEXT_STEPS.md  NOTEBOOK_INVESTIGATION_SUMMARY.txt  NOTEBOOK_ISSUES_QUICK_REFERENCE.md  NOTEBOOK_SYSTEM_ANALYSIS.md  PIPELINE_GUIDE.md  QUICKSTART.md  README_NOTEBOOK_ANALYSIS.md  REBUILD_STORAGE.md  RUNNING.md  SCRIPT_REVIEW_RECOMMENDATIONS.md  SHARED_CALENDAR_DIMENSION.md  STOCKS_MODEL_FIX_VERIFICATION.md  TESTING_GUIDE.md  TEST_APP_README.md  V2_COMPLETION_STATUS.md  VERIFY_TICKER_COUNT.md  check_bronze_counts.py  check_forecast_tickers.py  debug_dimensional_selector_exchange.md  (+37 more)
config/: __init__.py  constants.py  domain_loader.py  loader.py  logging.py  markdown_loader.py  model_loader.py  models.py  pipeline_loader.py  schema_loader.py
configs/: alpha_vantage_endpoints.json  bls_endpoints.json  chicago_endpoints.json  cluster.yaml  model_company.yaml  polygon_endpoints.json  storage.json
core/: __init__.py  connection.py  context.py  duckdb_connection.py  error_handling.py  exceptions.py  validation.py
datapipelines/: build_silver_layer_optimized.py
docs/: ADDING_NEW_PROVIDER.md  AGGREGATE_GRAPHICS.md  API-AUDIT.md  APP_ARCHITECTURE_REFERENCE.md  ARCH-REF-002-summary.md  ARCHITECTURE_REFACTORING.md  BUILD_ALL_MODELS_GUIDE.md  BUILD_GUIDE.md  CODEBASE_ARCHITECTURE_ANALYSIS.md  COMPLETE_CLASS_METHOD_REFERENCE.md  COMPLETE_UML_DIAGRAMS.drawio  CONSOLIDATION_SUMMARY.md  DATA_PIPELINE_ARCHITECTURE.md  DEBUGGING_SYSTEM_PROPOSAL.md  DELTA_LAKE_IMPLEMENTATION_PROPOSAL.md  DELTA_LAKE_IMPLEMENTATION_SUMMARY.md  DELTA_LAKE_USAGE_GUIDE.md  DOMAIN_ARCHITECTURE_PROPOSAL.md  DUCKDB_DEPLOYMENT.md  DUCKDB_SETUP.md  ENV_SETUP.md  EQUITY_CORPORATE_MIGRATION_GUIDE.md  EQUITY_PIPELINE_ANALYSIS.md  EXHIBIT_AGGREGATION_GUIDE.md  FOLDER_FILTER_SYSTEM.md  GRAPH_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  (+49 more)
(+1782 files in other folders)
